# PalmAnnotate-Rust

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  Dioxus.toml  HANDOFF.md  PARITY_PLAN.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATUS.md  rust-toolchain.toml
assets/: styles.css
crates/palmannotate-core/: Cargo.toml
crates/palmannotate-core/src/: dedup.rs  depth.rs  detector.rs  error.rs  lib.rs  model.rs  output.rs  quality.rs  results.rs  storage.rs  yolo.rs
crates/palmannotate-core/tests/: dedup.rs  detector.rs  parity.rs  quality_depth.rs  storage.rs
docs/: android-build.md  architecture.md
models/: detector.config.json
plugins/palm-native/: Cargo.toml  build.rs
plugins/palm-native/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
plugins/palm-native/android/src/main/: AndroidManifest.xml
plugins/palm-native/android/src/main/java/dev/sawitulm/palmannotate/rust/nativebridge/: PalmNativePlugin.kt
plugins/palm-native/permissions/autogenerated/: reference.md
plugins/palm-native/permissions/autogenerated/commands/: camera_capture.toml  camera_start.toml  camera_status.toml  camera_stop.toml  orbbec_capture.toml  orbbec_close.toml  orbbec_list.toml  orbbec_open.toml  orbbec_refresh.toml  orbbec_request_permission.toml  orbbec_status.toml  saf_copy_from_path.toml  saf_copy_tree_to_temp.toml  saf_delete.toml  saf_exists.toml  saf_list.toml  saf_pick_folder.toml  saf_pick_json.toml  saf_read_to_temp.toml  saf_release_folder.toml  saf_validate.toml  saf_write.toml  temp_delete.toml
plugins/palm-native/permissions/schemas/: schema.json
plugins/palm-native/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
scripts/: normalize-docs.ps1  setup-android.ps1
src/: annotate.rs  app.rs  capture.rs  workflows.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
