[package]
name = "palmannotate-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
dioxus-logger = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "DomRect", "Element", "Event", "MouseEvent", "PointerEvent", "WheelEvent",
    "Window", "Document", "Navigator", "MediaDevices", "MediaStream",
    "MediaStreamTrack", "MediaStreamConstraints", "HtmlMediaElement",
    "HtmlVideoElement", "HtmlCanvasElement", "CanvasRenderingContext2d",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[workspace]
resolver = "2"
members = ["crates/palmannotate-core", "plugins/palm-native", "src-tauri"]

[profile]

# Optimized release profile — shrinks the Android .so dramatically vs debug.
# Recommended by Tauri's "reduce app size" guide.
[profile.release]
opt-level = "s"      # optimize for size (balanced; use "z" for absolute smallest)
lto = true           # link-time optimization + dead-code elimination
codegen-units = 1    # better optimization at the cost of compile time
panic = "abort"      # drop unwinding tables
strip = true         # strip debug symbols from the binary

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
