[package]
name = "palmannotate-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.1"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
