[package]
name = "tauri-plugin-palm-native"
version = "0.1.0"
authors = ["Sawit ULM"]
description = "PalmAnnotate Android CameraX, Orbbec, and SAF bridge"
edition = "2021"
rust-version = "1.93.1"
links = "tauri-plugin-palm-native"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2.11"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5", features = ["build"] }
